[build-system]
requires = ["setuptools>=75.6.0", "setuptools_scm[toml]>=5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ape-alchemy"
description = "ape-alchemy: Alchemy provider plugins"
readme = "README.md"
authors = [
    {name = "ApeWorX Ltd.", email = "admin@apeworx.io"}
]
license = "Apache-2.0"
keywords = ["ethereum"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.10"
dependencies = [
    "eth-ape>=0.8.34,<0.9",
    "eth-pydantic-types>=0.2.0,<0.3",
    "ethpm-types>=0.6.26,<0.7",
    "evm-trace>=0.2.6,<0.3",
    "web3>=6.20.1,<8",
    "requests>=2.32.3,<3",
    "evmchains>=0.1.3,<0.2",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/ApeWorX/ape-alchemy"

[dependency-groups]
docs = [
    "sphinx-ape",
]
test = [
    "ape-arbitrum",
    "ape-base",
    "ape-fantom",
    "ape-optimism",
    "ape-polygon",
    "ape-polygon-zkevm",
    "pytest>=6.0",
    "pytest-xdist",
    "pytest-cov",
    "pytest-mock",
    "hypothesis>=6.2.0,<7.0",
    "websocket-client",
]
lint = [
    "mypy>=1.15.0,<2",
    "types-setuptools",
    "types-requests",
    "ruff>=0.9.0",
    "mdformat>=0.7.22",
    "mdformat-gfm>=0.3.5",
    "mdformat-frontmatter>=0.4.1",
    "mdformat-pyproject>=0.0.2",
]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
    {include-group = "docs"},
    "commitizen",
    "pre-commit",
    "pytest-watch",
    "IPython",
    "ipdb",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
ape_alchemy = ["py.typed"]

[tool.setuptools_scm]
write_to = "ape_alchemy/version.py"

[tool.mypy]
exclude = "build/"
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "DTZ",    # flake8-datetimez
    "T10",    # flake8-debugger (catches breakpoint/pdb)
    "T20",    # flake8-print
    "PYI",    # flake8-pyi
    "PT",     # flake8-pytest-style
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "TC",     # flake8-type-checking
    "ARG",    # flake8-unused-arguments
]
ignore = [
    "TC003",  # Move stdlib import into TYPE_CHECKING block
]

[tool.ruff.lint.per-file-ignores]
"version.py" = ["ALL"]
"__init__.py" = ["F401"]
"ape_alchemy/exceptions.py" = ["N818"]  # Exception naming is intentional
"ape_alchemy/provider.py" = ["N812"]  # Import aliasing for compatibility
"tests/**/*.py" = ["ARG001", "ARG002"]  # Pytest fixtures may appear unused

[tool.ruff.lint.isort]
force-wrap-aliases = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = """
    -p no:ape_test
    -p no:pytest_ethereum
    --cov-branch
    --cov-report term
    --cov-report html
    --cov-report xml
    --cov=ape_alchemy
"""
python_files = "test_*.py"
testpaths = "tests"
markers = "fuzzing: Run Hypothesis fuzz test suite"

[tool.mdformat]
number = true
